--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "bcrypt": "^5.1.0",
     "express": "^4.17.1",
     "express-session": "^1.17.3",
-    "mongoose": "^7.0.2",
-    "passport": "^0.6.0"
+    "mongoose": "^7.0.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.9"
